--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ i {
                       
                     <div class="col-12">
                       <div class="p-4 mb-2 bg-light text-dark lead">
-                        Обратите внимание на наших товарищей из Tik Tok, занимающихся созданием контента по анекдотам. Советую всем оценить их контент!<br>
+                        Обратите внимание на наших товарищей из Tik Tok, занимающихся созданием контента по анекдотам. Советую всем оценить их видеоролики!<br>
                         Ссылка: <a href="https://www.tiktok.com/@anekdotnoe_otdelenie">https://www.tiktok.com/@anekdotnoe_otdelenie</a><br>
                         <video controls class="align-right" src="anekdotnoe_otdeleniye.mp4" height="45%" width="25%" alt="Анекдот проплаченный Кремлем"></video>
                       </div>
