--- a/suggest.html
+++ b/suggest.html
@@ -86,7 +86,7 @@ background-attachment: fixed;
                 </div>
                 <div class="col-6 bg-light text-dark  py-4  lead">
                   <div class="form-floating">
-                      <textarea class="form-control" placeholder="Запишите здесь анекдот, который вы хотите предложить" id="floatingTextarea2" style="overflow: auto; height: 200px"></textarea>
+                      <textarea class="form-control" placeholder="Запишите здесь анекдот, который вы хотите предложить" id="floatingTextarea2" style="overflow: auto; height: 200px; min-height: 200px"></textarea>
                       <label for="floatingTextarea2">Анекдот:</label>
                     </div>
                   </div>
